--- a/src/app/cliente/cliente-edit/cliente-edit.component.html
+++ b/src/app/cliente/cliente-edit/cliente-edit.component.html
@@ -1,17 +1,9 @@
-<div class="row">
-    <div class="col-12">
+<div >
+    <div class="col-6">
         <br>
         <h2 class="text-center">Editar Informacion</h2>
         <br>
         <form name="cliente" (ngSubmit)="f.form.valid && editCliente()" #f="ngForm" novalidate>
-              <div class="form-group">
-                <label for="clienteLogin"><b>Login</b></label>
-                <input type="text" name="clienteLogin" class="form-control" id="clienteLogin" [(ngModel)]="cliente.login"
-                       #clienteLogin="ngModel" [ngClass]="{ 'is-invalid': f.submitted && clienteLogin.invalid }" required>
-                       <div class="invalid-feedback">
-                    <div>Falta ingresar el login</div>
-                </div>
-  
                 <div class="form-group">
                   <label for="clienteCorreo"><b>Correo Electronico</b></label>
                   <input type="text" name="clienteCorreo" class="form-control" id="clienteCorreo" [(ngModel)]="cliente.correo"
