--- a/src/app/interes-fotografico/interes-fotografico-detail/interes-fotografico-detail.component.css
+++ b/src/app/interes-fotografico/interes-fotografico-detail/interes-fotografico-detail.component.css
@@ -1,11 +1,11 @@
 
 
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC:700&display=swap');
-
-  
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 .interesFotograficoNombre{
-	font-family: 'Amatic SC', cursive;
-	font-style :  bold;
+	font-family: 'Quicksand', sans-serif;
+
+	font-style :  bold, cursive;
     font-size: 100px;
     text-align:center;
 }
